规范序列化